--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: untitled_production
-  username: untitled
-  password: <%= ENV['UNTITLED_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  database: exts-chat-1_production
+  pool: 5
+  username: root
+  password:
