--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: untitled_production
+  url: redis://redistogo:50ea2e3580602512c658743d86338900@cod.redistogo.com:11075/
